syntax = "proto3";

package resolver;

option go_package = "api/grpc/resolver";

import "api/grpc/cloudevents/cloudevent.proto";

service Service {
  rpc SubmitBatch(SubmitBatchRequest) returns (BatchResponse);
}

message SubmitBatchRequest {
  repeated pb.CloudEvent msgs = 1;
}

message BatchResponse {
  uint32 count = 1;
  string err = 2;
}
